MOOC UNGS RECS: Course Outline
- Minor Fixes
- Added Dates

--- a/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
+++ b/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
@@ -1,4 +1,4 @@
-<p class="margin_bottom_20">The course encompasses a 7-week period. Participants are expected to engage in approximately 35 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
+<p class="margin_bottom_20">The course encompasses a 7-week period. Participants are expected to engage in approximately 35 hours of active learning through readings, videos, discussions and quizzes. </p>
 <p class="margin_bottom_20">The course is articulated in two modules:</p>
 <p class="margin_bottom_20"><strong>Module 1</strong> is an introduction to the <strong>UN Global Study as a framework for action</strong>. Specific attention will be paid here to the Study’s recommendations and the developing follow-up initiatives which are being developed in cooperation with different stakeholders, from UN agencies to governments, from civil society to academia.</p>
 <p class="margin_bottom_20"><strong>Module 2</strong> is dedicated to <strong>regional perspectives</strong> and a variety of recent initiatives, examples and practices that are being implemented there. In so doing, the course specifically analyses the most relevant issues and themes in each region: from immigration detention to deinstitutionalisation, from deprivation of liberty for national security reasons, to diversion measures. </p>
@@ -176,6 +176,7 @@
         <div class="timeline-badge first1">1</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">23 &ndash; 29 November 2020</h4>
                 <h4 class="timeline-title">The UN Global Study as a framework for action</h4>
             </div>
             <div class="timeline-body">
@@ -194,6 +195,7 @@
         <div class="timeline-badge third3">2</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">30 November &ndash; 6 December 2020</h4>
                 <h4 class="timeline-title">Promising practices in Sub-Saharan Africa</h4>
             </div>
             <div class="timeline-body">
@@ -211,6 +213,7 @@
         <div class="timeline-badge sixth6">3</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">7 &ndash; 13 December 2020</h4>
                 <h4 class="timeline-title">Practical perspectives from East Asia/Asia Pacific</h4>
             </div>
             <div class="timeline-body">
@@ -226,6 +229,7 @@
         <div class="timeline-badge third3">4</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">14 &ndash; 20 December 2020</h4>
                 <h4 class="timeline-title">Challenges and practices in the Arab World</h4>
             </div>
             <div class="timeline-body">
@@ -241,6 +245,7 @@
         <div class="timeline-badge third3">5</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">21 &ndash; 27 December 2020</h4>
                 <h4 class="timeline-title">A focus area for Latin America and the Caribbean </h4>
             </div>
             <div class="timeline-body">
@@ -255,6 +260,7 @@
         <div class="timeline-badge third3">6</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">28 December 2020 &ndash; 3 January 2021</h4>
                 <h4 class="timeline-title">Experiences and advocacy from Europe</h4>
             </div>
             <div class="timeline-body">
@@ -270,6 +276,7 @@
         <div class="timeline-badge third3">7</div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <h4 class="timeline-title">4 &ndash; 10 January 2021</h4>
                 <h4 class="timeline-title">Programmes and proposals in the Caucasus</h4>
             </div>
             <div class="timeline-body">
