MOOC UNGS RECS: Contact Us
- Small Fixes to typos
- Added Message Sent Page text

--- a/website/02-Education/moocs/ungs-recs/05-Contact-Us-part1.html
+++ b/website/02-Education/moocs/ungs-recs/05-Contact-Us-part1.html
@@ -1,6 +1,6 @@
 <p class="margin_bottom_20">[nbsp]</p>
 <p class="subtitle_page_programme">Global Campus MOOCs</p>
-<p class="margin_bottom_20">For general queries about the Global Campus MOOC on <em>Children Deprived of Liberty: Learning from the UN Global Study</em> you can drop an e-mail to <a class="titolo_gc_europe" href="mailto:e-learning@gchumanrights.org">e-learning@gchumanrights.org</a> or use the contact form below.</p>
+<p class="margin_bottom_20">For general queries about the Global Campus MOOC on <em>Children Deprived of Liberty: Enacting the Recommendations of the UN Global Study</em> you can drop an e-mail to <a class="titolo_gc_europe" href="mailto:e-learning@gchumanrights.org">e-learning@gchumanrights.org</a> or use the contact form below.</p>
 <p class="margin_bottom_20">We will reply to you as soon as possible.</p>
 <p>Thank you,</p>
 <p class="margin_bottom_20">The Global Campus MOOC Staff</p>
@@ -8,7 +8,18 @@
 <p>Riviera San Nicolò 26</p>
 <p>30126 Venice – Lido</p>
 <p class="margin_bottom_20">Italy</p>
-<p>Website: <a class="titolo_gc_europe" href="//www.gchumanrights.org/mooc-gbv">https://gchumanrights.org/mooc-gbv</a></p>
+<p>Website: <a class="titolo_gc_europe" href="//www.gchumanrights.org/mooc-ungs-recs">https://gchumanrights.org/mooc-ungs-recs</a></p>
 <p>Email: <a class="titolo_gc_europe" href="mailto:e-learning@gchumanrights.org">e-learning@gchumanrights.org</a></p>
 <p>Telephone: +39 041 2720 911</p>
 <p>Fax: +39 041 2720 914</p>
+
+<!-- 
+Message SENT
+
+<p class="subtitle_page_programme">Your message has been sent!</p>
+<p class="margin_bottom_20">Thank you for your message and interest in the Global Campus MOOC on <em>Children Deprived of Liberty: Enacting the Recommendations of the UN Global Study</em>.</p>
+<p class="margin_bottom_20">We will reply to your queries as soon as possible.</p>
+<p class="margin_bottom_20">In the meantime, we wish you a pleasant visit of our website.</p>
+<p class="margin_bottom_20">Best regards,<br>The Global Campus MOOC Staff</p> 
+
+-->
