MOOC UNGS RECS: Minor fixe to Course Outline

--- a/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
+++ b/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
@@ -1,6 +1,6 @@
 <p class="margin_bottom_20">The course encompasses a 7-week period. Participants are expected to engage in approximately 35 hours of active learning through readings, videos, discussions and quizzes. </p>
 <p class="margin_bottom_20">The course is articulated in two modules:</p>
-<p class="margin_bottom_20"><strong>Module 1</strong> is an introduction to the <strong>UN Global Study as a framework for action</strong>. Specific attention will be paid here to the Study’s recommendations and the developing follow-up initiatives which are being developed in cooperation with different stakeholders, from UN agencies to governments, from civil society to academia.</p>
+<p class="margin_bottom_20"><strong>Module 1</strong> is an introduction to the <strong>UN Global Study as a framework for action</strong>. Specific attention will be paid here to the Study’s recommendations and the developing follow-up initiatives which are being enacted in cooperation with different stakeholders, from UN agencies to governments, from civil society to academia.</p>
 <p class="margin_bottom_20"><strong>Module 2</strong> is dedicated to <strong>regional perspectives</strong> and a variety of recent initiatives, examples and practices that are being implemented there. In so doing, the course specifically analyses the most relevant issues and themes in each region: from immigration detention to deinstitutionalisation, from deprivation of liberty for national security reasons, to diversion measures. </p>
 <p class="margin_bottom_20">[nbsp]</p>
 <style>
@@ -265,7 +265,7 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    <br>Manfred Nowak, Secretary-General of the Global Campus of Human Rights
+                    <br>Manfred Nowak, SG Global Campus of Human Rights / Global Study Independent Expert
                     <br>Benoit Van Keirsbilck, Defence for Children International-Belgium
                     <br>Students of the Global Campus Global Classroom 2020
                 </p>
