MOOC UNGS RECS: Media Toolkit - Changes to all file insert tag

--- a/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
+++ b/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
@@ -1,6 +1,6 @@
 <!-- HEADER TRAILER -->
 <div class="video169_container">
-    <iframe class="video169" src="https://www.youtube.com/embed/ydLxRmB5ETU" frameborder="0" allowfullscreen=""></iframe>
+    <iframe class="video169" src="https://www.youtube.com/embed/3dEFcVS-oiE" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
 
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 ">YouTube Video Teaser: <a class="titolo_gc_europe" href="https://www.youtube.com/watch?v=ydLxRmB5ETU" target="_blank">https://www.youtube.com/watch?v=ydLxRmB5ETU</a></p>
+            <p class="margin_bottom_20 ">YouTube Video Teaser: <a class="titolo_gc_europe" href="https://www.youtube.com/watch?v=3dEFcVS-oiE" target="_blank">https://www.youtube.com/watch?v=3dEFcVS-oiE</a></p>
         </div>
     </div>
 </div>
