--- a/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
+++ b/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
@@ -33,7 +33,8 @@
                 <div class="orizzontale">[nbsp]</div>
             </div>
         </div>
-        <div class="list_accordion"><iframe src="https://drive.google.com/embeddedfolderview?id=1EmoV3tEVQ2XX96AARe_AVTEWoluMLtNc#grid" style="width:100%; height:600px; border:0;"></iframe>/div>
+        <div class="list_accordion"><iframe src="https://drive.google.com/embeddedfolderview?id=1369rUjzJ4csUqfrgrvOIFOmHkJI_UtCO#grid" style="width:100%; height:300px; border:0;"></iframe></div>
+
     </div>
 </div>
 
