MOOC UNGS RECS: Various
- Course Outline Update
- Media-Toolkit Update
- Media-Toolkit Images Update

--- a/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
+++ b/website/02-Education/moocs/ungs-recs/03-Course-Outline-part1.html
@@ -181,7 +181,7 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    <br>Manfred Nowak, SG Global Campus of Human Rights / Global Study Independent Expert
+                    <br>Manfred Nowak, SG Global Campus of Human Rights / UN Global Study Independent Expert
                     <br>High-Level Panel Experts, Global Classroom 2020
                     <br>Students of the Global Campus Global Classroom 2020
                 </p>
@@ -265,7 +265,7 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    <br>Manfred Nowak, SG Global Campus of Human Rights / Global Study Independent Expert
+                    <br>Manfred Nowak, SG Global Campus of Human Rights / UN Global Study Independent Expert
                     <br>Benoit Van Keirsbilck, Defence for Children International-Belgium
                     <br>Students of the Global Campus Global Classroom 2020
                 </p>
