--- a/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
+++ b/website/02-Education/moocs/ungs-recs/06-Media-Toolkit.html
@@ -58,6 +58,9 @@
 
 
 <!-- POSTER -->
+<!-- ORIGINAL LINK 
+    https://drive.google.com/file/d/1ZhgUjV-HRdPDOjXvM3T6goipD89NlcAG/view?usp=sharing
+-->
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
@@ -69,11 +72,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Children Deprived of Liberty: Enacting the Recommendations of the UN Global Study</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1ZhgUjV-HRdPDOjXvM3T6goipD89NlcAG/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/open?id=1ZhgUjV-HRdPDOjXvM3T6goipD89NlcAG" target="_blank" download="Poster MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1ZhgUjV-HRdPDOjXvM3T6goipD89NlcAG" target="_blank" download="Poster MOOC PPHR 2020.pdf">Download</a></p>
             </div>
         </div>
     </div>
@@ -81,6 +84,9 @@
 
 
 <!-- INFO SHEET -->
+<!-- ORIGINAL LINK 
+https://drive.google.com/file/d/1CyVYfVCIYy9RhLvsORlmI3KQLtzwaW2F/view?usp=sharing
+-->
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
@@ -92,11 +98,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Children Deprived of Liberty: Enacting the Recommendations of the UN Global Study</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1CyVYfVCIYy9RhLvsORlmI3KQLtzwaW2F/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/open?id=1CyVYfVCIYy9RhLvsORlmI3KQLtzwaW2F" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1CyVYfVCIYy9RhLvsORlmI3KQLtzwaW2F" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf">Download</a></p>
             </div>
         </div>
     </div>
@@ -120,6 +126,13 @@
 
 
 <!-- IMAGES MEDIAKIT -->
+<!-- ORIGINAL LINKS
+
+https://drive.google.com/file/d/1laB29-sySEUfKKPRQJAi10pSN6UqVjsa/view?usp=sharing
+https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip
+
+-->
+
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
@@ -133,8 +146,8 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
             <p>[nbsp]</p>
-            <div class="download"><a href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
+            <div class="download"><a href="https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
             </div>
         </div>
     </div>
@@ -142,6 +155,9 @@
 
 
 <!-- NEWSLETTER -->
+<!-- ORIGINAL LINK 
+https://drive.google.com/file/d/1CyVYfVCIYy9RhLvsORlmI3KQLtzwaW2F/view?usp=sharing
+-->
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
