--- a/website/02-Education/OC/IEO/01-about-b-part4.html
+++ b/website/02-Education/OC/IEO/01-about-b-part4.html
@@ -11,16 +11,18 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">International election observation plays an important role in international relations since almost thirty years. The <a href="https://www.ndi.org/sites/default/files/1923_declaration_102705_0.pdf" class="titolo_gc_europe" target="_blank">Declaration of Principles for International Election Observation</a> adopted by the UN in 2005 is one of the first attempts of the international community to set standard rules which are recognised at international level. The European Union is strongly committed to contribute to all democratic processes around the world through various activities, including electoral observation. The adoption of EU guidelines on preconditions for EU observation missions and a code of conduct for EU electoral observers represent an important step towards enhanced co-ordination and serve as a basis for all electoral observers. The 2005 Declaration and the Code of Conduct set a common framework, methodology, standards and best practices valid for all observers both at national (domestic) and international level.
             </p>
-            <p class="margin_bottom_20">The adoption of <a href="http://www.eods.eu/template/default/files/EU_guidelines_on_criteria_forselection_observers.pdf" target="_blank" class="titolo_gc_europe">EU guidelines on preconditions for EU observation missions</a> and a <a href="https://eeas.europa.eu/sites/eeas/files/code_of_conduct_for_eu_election_observers.pdf" target="_blank" class="titolo_gc_europe">code of conduct for EU electoral observers</a> represent an important step towards enhanced co-ordination and serve as a basis for all electoral observers. The 2005 Declaration and the Code of Conduct set a common framework, methodology, standards and best practices valid for all observers both at national (domestic) and international level.
+            <p class="margin_bottom_30">The adoption of <a href="http://www.eods.eu/template/default/files/EU_guidelines_on_criteria_forselection_observers.pdf" target="_blank" class="titolo_gc_europe">EU guidelines on preconditions for EU observation missions</a> and a <a href="https://eeas.europa.eu/sites/eeas/files/code_of_conduct_for_eu_election_observers.pdf" target="_blank" class="titolo_gc_europe">code of conduct for EU electoral observers</a> represent an important step towards enhanced co-ordination and serve as a basis for all electoral observers. The 2005 Declaration and the Code of Conduct set a common framework, methodology, standards and best practices valid for all observers both at national (domestic) and international level.
             </p>
+            <p class="margin_bottom_10 title_accordion">Learning objectives</p>
+            <p class="margin_bottom_10">By taking this course, you’ll be able to:</p>
+            <ul class="lista_con_pallini margin_bottom_30">
+                <li>gain a comprehensive overview on the history of electoral observation</li>
+                <li>acquire thorough knowledge of international legal standards, observation methodology, missions functioning (short term observation) and media monitoring</li>
+                <li>develop theoretical and practical skills which will be an asset in case of further applications as international observers</li>
+                <li>apply as qualified short term observer (STO) in any election observation missions</li>
+            </ul>
+            <p class="margin_bottom_10 title_accordion">Target audience</p>
+            <p class="margin_bottom_20">The course adresses all participants who are interested in deepening their knowledge on the functioning of an electoral observation mission from a multi-disciplinary approach. It is specifically aimed at training civilian staff in election observation missions at the start of their career (i.e. short term observers). Selected applicants will become aware of the role, tasks and status of international observers, and will be given a theoretical and practical training on election observation and election observation missions functioning. The course also provides thorough knowledge of international legal standards, observation methodology and missions functioning that might be of interest to political experts, analysts, journalists, consultants and researchers.</p>
         </div>
     </div>
 </div>
-<style>
-.gc-table-erma th {
-    border-right: 1px solid #e0dfdf;
-    border-bottom: 1px solid #e0dfdf;
-    padding: 15px 15px;
-    text-align: left;
-}
-</style>
