OC IEO: About New - part4 and part5 initial commits

--- a/website/02-Education/OC/IEO/01-about-b-part4.html
+++ b/website/02-Education/OC/IEO/01-about-b-part4.html
@@ -1,7 +1,7 @@
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion">Rationale and objectives</p>
+            <p class="title_accordion">Structure and content</p>
             <p class="number_universities">[nbsp]</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
@@ -9,20 +9,17 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">International election observation plays an important role in international relations since almost thirty years. The <a href="https://www.ndi.org/sites/default/files/1923_declaration_102705_0.pdf" class="titolo_gc_europe" target="_blank">Declaration of Principles for International Election Observation</a> adopted by the UN in 2005 is one of the first attempts of the international community to set standard rules which are recognised at international level. The European Union is strongly committed to contribute to all democratic processes around the world through various activities, including electoral observation. The adoption of EU guidelines on preconditions for EU observation missions and a code of conduct for EU electoral observers represent an important step towards enhanced co-ordination and serve as a basis for all electoral observers. The 2005 Declaration and the Code of Conduct set a common framework, methodology, standards and best practices valid for all observers both at national (domestic) and international level.
-            </p>
-            <p class="margin_bottom_30">The adoption of <a href="http://www.eods.eu/template/default/files/EU_guidelines_on_criteria_forselection_observers.pdf" target="_blank" class="titolo_gc_europe">EU guidelines on preconditions for EU observation missions</a> and a <a href="https://eeas.europa.eu/sites/eeas/files/code_of_conduct_for_eu_election_observers.pdf" target="_blank" class="titolo_gc_europe">code of conduct for EU electoral observers</a> represent an important step towards enhanced co-ordination and serve as a basis for all electoral observers. The 2005 Declaration and the Code of Conduct set a common framework, methodology, standards and best practices valid for all observers both at national (domestic) and international level.
-            </p>
-            <p class="margin_bottom_10 title_accordion">Learning objectives</p>
-            <p class="margin_bottom_10">By taking this course, you’ll be able to:</p>
-            <ul class="lista_con_pallini margin_bottom_30">
-                <li>gain a comprehensive overview on the history of electoral observation</li>
-                <li>acquire thorough knowledge of international legal standards, observation methodology, missions functioning (short term observation) and media monitoring</li>
-                <li>develop theoretical and practical skills which will be an asset in case of further applications as international observers</li>
-                <li>apply as qualified short term observer (STO) in any election observation missions</li>
+            <p class="margin_bottom_20">The aim of the course is to deepen theoretical and practical expertise on international election observation by providing participants with knowledge and practical skills that are applicable to the daily functioning of election observation missions, an asset in case of further applications as international observers. Knowledge of international standards, methodology and best practices will also be essential for those interested in developing and training a network of domestic observers.</p>
+            <p class="margin_bottom_20">Course dates: <strong>22 - 27 February 2021, including one live session each day</strong></p>
+            <p class="margin_bottom_10">The course covers the following core themes:</p>
+            <ul class="lista_con_pallini margin_bottom_20">
+                <li>International electoral observation: an introduction</li>
+                <li>Electoral observation history and international legal standards</li>
+                <li>Meet the sending authorities</li>
+                <li>Short term observers: code of conduct, observing and reporting tools</li>
+                <li>The media in electoral observation missions</li>
+                <li>Short term observers: living the field</li>
             </ul>
-            <p class="margin_bottom_10 title_accordion">Target audience</p>
-            <p class="margin_bottom_20">The course adresses all participants who are interested in deepening their knowledge on the functioning of an electoral observation mission from a multi-disciplinary approach. It is specifically aimed at training civilian staff in election observation missions at the start of their career (i.e. short term observers). Selected applicants will become aware of the role, tasks and status of international observers, and will be given a theoretical and practical training on election observation and election observation missions functioning. The course also provides thorough knowledge of international legal standards, observation methodology and missions functioning that might be of interest to political experts, analysts, journalists, consultants and researchers.</p>
         </div>
     </div>
 </div>
