--- a/website/02-Education/OC/IEO/01-about-b-part5.html
+++ b/website/02-Education/OC/IEO/01-about-b-part5.html
@@ -1,7 +1,7 @@
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion">Learning Objectives</p>
+            <p class="title_accordion">Methodology and coordination</p>
             <p class="number_universities">[nbsp]</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
@@ -9,12 +9,18 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_10">By taking this course, you’ll be able to:</p>
+            <p class="margin_bottom_20">The course is an <strong>instructor-led training programme coordinated and tutored by Demetrio Lazagna, whose expertise will guide you throughout the various modules</strong>. </p>
+            <p class="margin_bottom_20">Demetrio Lazagna’s expertise ensures academic quality and consistency of instruction throughout the course. In his role he helps identifying and responding to participants’ needs while managing the interventions of lecturers and experts and supporting them throughout the design and development of their work.</p>
+            <p class="margin_bottom_20"> During this digital version of the course he will be present and active in all live sessions and at your disposal during the 'ask-the-expert' sessions for enriching and complementing the discussion. He will also act as moderator during the roundtable session with representatives from sending authorities on Wednesday February 24 2021.</p>
+            <p class="margin_bottom_10">The course will be delivered through a combination of:</p>
             <ul class="lista_con_pallini margin_bottom_20">
-                <li>gain a comprehensive overview on the history of electoral observation</li>
-                <li>acquire thorough knowledge of international legal standards, observation methodology, missions functioning (short term observation) and media monitoring</li>
-                <li>develop theoretical and practical skills which will be an asset in case of further applications as international observers</li>
-                <li>apply as qualified short term observer (STO) in any election observation missions</li>
+                <li><strong>Online participation</strong> via Zoom live sessions, where you will hear from experts and debate with them the practical issues and challenges of their work</li>
+                <li><strong>Live working groups</strong> via Zoom Breakout rooms, where you will be asked to step in the shoes of a true electoral observer and to act as if deployed in the field</li>
+                <li><strong>Real time feedback</strong> provided by the trainers during and after group work</li>
+                <li><strong>Individual reading and study time</strong>& through pre-recorded video lectures, powerpoint presentations, reading materials and quizzes</li>
+                <li><strong>Daily meetings with trainers</strong> during a live session, where you will receive targeted inputs on their specific field of expertise</li>
+                <li>A <strong>Round table</strong> discussion with representatives from sending authorities who will discuss recruitment procedures and share their tips and tricks </li>
+                <li><strong>Ask-the-expert sessions</strong>, where remaining questions can be posed to the lecturer of the day through a dedicated discussion forum</li>
             </ul>
         </div>
     </div>
