--- a/website/02-Education/OC/IEO/01-about-b-part6.html
+++ b/website/02-Education/OC/IEO/01-about-b-part6.html
@@ -1,7 +1,7 @@
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion">Structure and content</p>
+            <p class="title_accordion">Time commitment</p>
             <p class="number_universities">[nbsp]</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
@@ -9,16 +9,16 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">The aim of the course is to deepen theoretical and practical expertise on international election observation by providing participants with knowledge and practical skills that are applicable to the daily functioning of election observation missions, an asset in case of further applications as international observers. Knowledge of international standards, methodology and best practices will also be essential for those interested in developing and training a network of domestic observers.</p>
-            <p class="margin_bottom_20">Course dates: <strong>22 - 27 February 2021, including one live session each day</strong></p>
-            <p class="margin_bottom_10">The course covers the following core themes:</p>
+            <p class="margin_bottom_20">Participants are expected to engage in approximately <strong>25-30 hours of active learning</strong> through individual study and readings, quizzes, participation in live online sessions, debates and group work on assigned case studies.</p>
+            <p>In order to ensure all participants the necessary time to study, revise and complete all quizzes, the online course will open one week ahead of the first live session and will close one week after the last live session, for a total of 3 weeks (15 February – 6 March 2021).</p>
+            <p class="margin_bottom_10">The course includes <strong>6 live sessions:</strong></p>
             <ul class="lista_con_pallini margin_bottom_20">
-                <li>International electoral observation: an introduction</li>
-                <li>Electoral observation history and international legal standards</li>
-                <li>Meet the sending authorities</li>
-                <li>Short term observers: code of conduct, observing and reporting tools</li>
-                <li>The media in electoral observation missions</li>
-                <li>Short term observers: living the field</li>
+                <li>Monday 22 February, from 13:00 to 13:45 CET</li>
+                <li>Tuesday 23 February from 13:00 to 13:45 CET</li>
+                <li>Wednesday 24 February from 13:00 to 14:30 CET</li>
+                <li>Thursday 25 February from 13:00 to 14:30 CET</li>
+                <li>Friday 26 February from 13:00 to 14:30 CET (round table)</li>
+                <li>Saturday 27 February from 13:00 to 14:30 CET</li>
             </ul>
         </div>
     </div>
