OC IEO: Course Outline - Updates

--- a/website/02-Education/OC/IEO/03-course-outline-part02.html
+++ b/website/02-Education/OC/IEO/03-course-outline-part02.html
@@ -174,9 +174,7 @@
         </div>
         <div class="timeline-body">
 	      <p> 
-      		<br><!-- <a class="titolo_gc_europe" href="{{link_url::603}}#sbo" title="Sebastian Boll">Sebastian Boll</a>, Regional Research Specialist, UN Action for Cooperation against Trafficking in Persons (UN-ACT)  -->
-      		Election observation expert
-             <!--<br><a class="titolo_gc_europe" href="{{link_url::603}}#pdp" title="Dr. Pietro de Perini">Dr. Pietro de Perini</a>, University of Padua-->
+      		<br>Armin Rabitsch, Election observation expert
 			</p>
         </div>
       </div>
