OC IEO: Course Outline - Minor fixes

--- a/website/02-Education/OC/IEO/03-course-outline-part02.html
+++ b/website/02-Education/OC/IEO/03-course-outline-part02.html
@@ -174,7 +174,7 @@
         </div>
         <div class="timeline-body">
 	      <p> 
-      		<br>Armin Rabitsch, Election observation expert
+      		<br><a class="titolo_gc_europe" href="{{link_url::603}}#ar" title="Armin Rabitsch">Armin Rabitsch</a>, Election observation expert
 			</p>
         </div>
       </div>
