--- a/website/02-Education/OC/IEO/07-Media-Toolkit.html
+++ b/website/02-Education/OC/IEO/07-Media-Toolkit.html
@@ -105,7 +105,7 @@ https://drive.google.com/file/d/1A4JLjRw6hizfCygDopTJvlfTo6t-PN2c/view?usp=shari
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion">Programme</p>
+            <p class="title_accordion">Pictures (Media Kit)</p>
             <p class="number_universities"> </p>
             <div class="piu_accordion">
                 <div class="verticale"> </div>
@@ -113,31 +113,27 @@ https://drive.google.com/file/d/1A4JLjRw6hizfCygDopTJvlfTo6t-PN2c/view?usp=shari
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Programme about the Online Course for <em>International Electoral Observers</em>.</p>
+            <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
             <div class="box_horizontal_a4_container"><iframe class="box_horizontal_a4" src="https://drive.google.com/file/d/1A4JLjRw6hizfCygDopTJvlfTo6t-PN2c/preview"></iframe></div>
-            <p>&nbsp;</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1A4JLjRw6hizfCygDopTJvlfTo6t-PN2c" target="_blank" download="Programme OC IEO 2021.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1A4JLjRw6hizfCygDopTJvlfTo6t-PN2c" target="_blank" download="Programme OC IEO 2021.pdf">Download</a></p>
+             <p>&nbsp;</p>
+            <div class="download"><a href="files/eiuc/ieo/2020/media_toolkit/Media-Kit.zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/ieo/2020/media_toolkit/Media-Kit.zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
             </div>
         </div>
     </div>
 </div>
 
 <!-- FB POSTS -->
-<p>{{file::eiuc/promo-pphr-2020/fb-posts.php}}</p>
+<p>{{file::eiuc/promo-oc-ieo/2020/fb-posts.php}}</p>
 <!-- TW POSTS -->
-<p>{{file::eiuc/promo-pphr-2020/tw-posts.php}}</p>
+<p>{{file::eiuc/promo-oc-ieo/2020/tw-posts.php}}</p>
 <!-- IG POSTS -->
-<p>{{file::eiuc/promo-pphr-2020/insta-posts.php}}</p>
+<p>{{file::eiuc/promo-oc-ieo/2020/insta-posts.php}}</p>
 <!-- IMAGES POSTS -->
-<p>{{file::eiuc/promo-pphr-2020/img-posts.php}}</p>
+<p>{{file::eiuc/promo-oc-ieo/2020/img-posts.php}}</p>
+
+
 <!-- IMAGES MEDIAKIT -->
-<!-- ORIGINAL LINKS
-
-https://drive.google.com/file/d/1laB29-sySEUfKKPRQJAi10pSN6UqVjsa/view?usp=sharing
-https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip
-
--->
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
@@ -151,8 +147,8 @@ https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20
         <div class="list_accordion">
             <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
             <p>&nbsp;</p>
-            <div class="download"><a href="https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://gchumanrights.org/files/eiuc/ungs-recs/Media-Toolkit/MOOC%20UNGS-RECS%20-%20Pictures%20(Media%20Kit).zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
+            <div class="download"><a href="files/eiuc/ieo/2020/media_toolkit/Media-Kit.zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/ieo/2020/media_toolkit/Media-Kit.zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
             </div>
         </div>
     </div>
