EMA: Fees and Expenses

--- a/website/02-Education/ema/call-2021/07-fees-part1.html
+++ b/website/02-Education/ema/call-2021/07-fees-part1.html
@@ -1,4 +1,4 @@
-<p class="subtitle_page_programme">How to Apply</p>
+<p class="subtitle_page_programme">Fees and Expenses</p>
 <p class="margin_bottom_20">The <strong>tuition fee</strong> for the academic year 2021/2022 is <strong>5650.00€</strong>, payable in two instalments.</p>
 <p class="margin_bottom_20">Tuition fees cover all EMA courses, both in the first and second semester; reading materials for the first semester; tutoring; access to Global Campus' specialised library; individual access to our e-learning platform; use of available IT facilities (including wireless area and computer room), and the field trip (subject to final budgetary approval).</p>
 
