OC IEO: Fixes to Colombi affiliation

--- a/website/02-Education/OC/IEO/03-course-outline-part02.html
+++ b/website/02-Education/OC/IEO/03-course-outline-part02.html
@@ -220,7 +220,7 @@
         </div>
         <div class="timeline-body">
 	      	<p> 
-         	<br><a class="titolo_gc_europe" href="{{link_url::603}}#ac" title="Alice Colombi">Alice Colombi</a>, Media Expert (Osservatorio dei Media di Pavia)	  		
+         	<br><a class="titolo_gc_europe" href="{{link_url::603}}#ac" title="Alice Colombi">Alice Colombi</a>,  Media and Digital Communications Expert	  		
 	  		</p>
 		</div>
       </div>
